# python-monorepo-evolution

./: README.md  RPG Dice Roller.ipynb  pyproject.toml  reqs.http  requirements.txt
diceroller/: __init__.py  __main__.py  test_package.py
lib/: README.md
service/: pyproject.toml
service/service/: __init__.py
