[tool.poetry]
name = "diceroller"
version = "0.1.0"
description = "A library/cli for evaluating RPG dice roll expressions"
authors = ["Alexander Metzner <alexander.metzner@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
